-
Bug
-
Resolution: Done
-
P4: Low
-
6.0.0
-
None
-
d5b79e876e38e03d105300d461af168894456acd (qt/qtbase/dev)
I have an object t with read-only bindableX. I want to bind a QProperty<int> to it. Does not work.
For Gerrit Dashboard: QTBUG-89508 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
342992,2 | QBindable: Mark non-modifying methods as const | dev | qt/qtbase | Status: MERGED | +2 | 0 |